# simpllm

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml
src/simpllm/: __init__.py  messages.py  tools.py  types.py  utils.py  wrappers.py
tests/: __init__.py  test_basic.py  test_integration.py
