[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpllm"
version = "0.1.1"
description = "Simple LLM wrapper library for Anthropic Claude and Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Liran", email = "liran@example.com"},
]
keywords = ["llm", "anthropic", "claude", "gemini", "google", "ai", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.60.0",
    "google-genai>=1.26.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "jsonref>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/simpllm"
Repository = "https://github.com/yourusername/simpllm"
Issues = "https://github.com/yourusername/simpllm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/simpllm"]
