[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpllm"
version = "0.1.2"
description = "Simple LLM wrapper library for Anthropic Claude and Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Liran", email = "liran@example.com"},
]
keywords = ["llm", "anthropic", "claude", "gemini", "google", "ai", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.60.0",
    "google-genai>=1.26.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "jsonref>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/simpllm"
Repository = "https://github.com/yourusername/simpllm"
Issues = "https://github.com/yourusername/simpllm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simpllm"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
exclude = [
    "^.venv/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
